# wtmpdb

./: INSTALL.md  NEWS  README.md  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml  meson-sanitizer.yml  meson.yml
include/: wtmpdb.h
lib/: basics.h  libwtmpdb.c  libwtmpdb.map  logwtmpdb.c  mkdir_p.c  mkdir_p.h  sqlite.c  sqlite.h  varlink.c  varlink.h
man/: custom-man.xsl  meson.build  pam_wtmpdb.8.xml  wtmpdb.8.xml  wtmpdbd.8.xml
src/: import.c  import.h  pam_wtmpdb.c  varlink-org.openSUSE.wtmpdb.c  varlink-org.openSUSE.wtmpdb.h  wtmpdb.c  wtmpdbd.c
tests/: meson.build  tst-dlopen.c  tst-get_id.c  tst-login-logout.c  tst-logwtmpdb.c  tst-varlink.c  tst-y2038-64bit-time_t.c
tmpfiles.d/: meson.build  wtmpdb.conf
units/: meson.build  wtmpdb-rotate.service  wtmpdb-rotate.timer  wtmpdb-update-boot.service  wtmpdbd-reader.socket  wtmpdbd-writer.socket  wtmpdbd.service  wtmpdbd.socket
